--- a/debian/rules
+++ b/debian/rules
@@ -9,9 +9,9 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 JAVA_COMPILER = jikes-classpath +E +Z0
 JAR = jar
 
-#common-build::
 binary-indep:
 	mkdir -p build
+	mkdir -p lib
 	${JAVA_COMPILER} -d build/proguard -sourcepath src src/proguard/ProGuard.java
 	${JAVA_COMPILER} -d build/retrace -sourcepath src src/proguard/retrace/ReTrace.java
 	${JAVA_COMPILER} -d build/proguardgui -cp build/proguard -sourcepath src src/proguard/gui/ProGuardGUI.java
@@ -21,5 +21,5 @@ binary-indep:
 	cd src && ${JAR} uf ../lib/proguardgui.jar proguard/gui/vtitle.gif proguard/gui/arrow.gif proguard/gui/default.pro proguard/gui/GUIResources.properties proguard/gui/boilerplate.pro
 
 clean::
-	rm -f lib/*.jar
 	rm -rf build/
+	rm -rf lib/
