--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: proguard
 Section: devel
 Priority: optional
 Maintainer: Sam Clegg <samo@debian.org>
-Build-Depends: debhelper (>= 4.1.0), cdbs, jikes-classpath, libant1.6-java
+Build-Depends: debhelper (>= 4.1.0), cdbs, jikes-classpath, libant1.6-java, fastjar
 Standards-Version: 3.6.1
 
 Package: proguard
