--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 JAVA_COMPILER = jikes-classpath +E +Z0
 JAR = jar
 
-binary-indep:
+build:
 	mkdir -p build
 	mkdir -p lib
 	${JAVA_COMPILER} -d build/proguard -sourcepath src src/proguard/ProGuard.java
