--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: proguard
 Section: devel
 Priority: optional
-Maintainer: Sam Clegg <samo@debian.org>
+Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
+Uploaders: Sam Clegg <samo@debian.org>
 Build-Depends: debhelper (>= 7.0.15), cdbs, default-jdk, ant
 Standards-Version: 3.9.4
 Vcs-Git: git://anonscm.debian.org/pkg-java/proguard.git
