--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9), cdbs, default-jdk, ant
 Standards-Version: 3.9.4
 Vcs-Git: git://anonscm.debian.org/pkg-java/proguard.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-java/proguard.git
+Homepage: http://proguard.sourceforge.net
 
 Package: proguard
 Architecture: all
