--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Sam Clegg <samo@debian.org>
 Build-Depends: debhelper (>= 9), cdbs, default-jdk, ant, gradle (>=2.5)
 Standards-Version: 3.9.6
 Vcs-Git: git://anonscm.debian.org/pkg-java/proguard.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-java/proguard.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-java/proguard.git
 Homepage: http://proguard.sourceforge.net
 
 Package: proguard
