--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.or
 Uploaders: Sam Clegg <samo@debian.org>
 Build-Depends: debhelper (>= 9), cdbs, default-jdk, ant, gradle (>=2.5)
 Standards-Version: 3.9.6
-Vcs-Git: git://anonscm.debian.org/pkg-java/proguard.git
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-java/proguard.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-java/proguard.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-java/proguard.git
 Homepage: http://proguard.sourceforge.net
 
 Package: proguard
