--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: proguard
 Section: devel
 Priority: optional
 Maintainer: Debian Java Maintainers <pkg-java-maintainers@lists.alioth.debian.org>
-Uploaders: Sam Clegg <samo@debian.org>
+Uploaders: Sam Clegg <samo@debian.org>,
+           Komal Sukhani <komaldsukhani@gmail.com>
 Build-Depends: debhelper (>= 9), cdbs, default-jdk, ant, gradle (>=2.5)
 Standards-Version: 3.9.6
 Vcs-Git: https://anonscm.debian.org/git/pkg-java/proguard.git
